# PixelMind

./: .gitignore  PRD.md  README.md  pyproject.toml
dashboard/: index.html  script.js  style.css
docs/: index.html
environment/: Dockerfile
src/: main.py  server.py
src/agents/: actor.py  base_agent.py  planner.py  validator.py
src/engine/: discovery_sweep.py  embeddings.py  playwright_wrapper.py  visual_perception.py
src/evaluation/: semantic_similarity.py
src/mcp/: jira_reporter.py
src/security/: adversarial_generator.py
src/utils/: dashboard_generator_v2.py  logger.py
tests/: conftest.py  test_e2e.py  test_playwright_wrapper.py
